implement server changes